@@ -239,11 +239,24 @@ public:
     QMenu *createStandardContextMenu();
 
     enum Extension {
+        ChooseMultipleFilesExtension
     };
     class ExtensionOption
     {};
     class ExtensionReturn
     {};
+
+    class ChooseMultipleFilesExtensionOption : public ExtensionOption {
+    public:
+        QWebFrame *parentFrame;
+        QStringList suggestedFiles;
+    };
+
+    class ChooseMultipleFilesExtensionReturn : public ExtensionReturn {
+    public:
+        QStringList files;
+    };
+
     virtual bool extension(Extension extension, const ExtensionOption *option = 0, ExtensionReturn *output = 0);
     virtual bool supportsExtension(Extension extension) const;
 
